# quote_manager_ayomide

./: README.md
quote_manage/: README.md  pyproject.toml
quote_manage/QM_src/: cli.py  database.py  models.py  uses.py
quote_manage/data/: data.json
quote_manage/tests/: test_cli.py
